// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be possible not to use the hocs 1`] = `
<Provider>
  <TranslationProvider
    translations={
      Object {
        "test": Object {
          "message": Array [
            "hello!",
          ],
        },
      }
    }
  >
    <Translate
      id="test.message"
    >
      hello!
    </Translate>
  </TranslationProvider>
</Provider>
`;

exports[`should change the language 1`] = `
<Provider>
  <WithTranslations>
    <TranslationProvider
      translations={
        Object {
          "test": Object {
            "message": Array [
              "message",
              "bericht",
            ],
          },
        }
      }
    >
      <WithConsumer>
        <Consumer>
          <Component
            setLanguage={[Function]}
          >
            <button
              onClick={[Function]}
            >
              lang
            </button>
            <Translate
              id="test.message"
            >
              message
            </Translate>
          </Component>
        </Consumer>
      </WithConsumer>
    </TranslationProvider>
  </WithTranslations>
</Provider>
`;

exports[`should change the language 2`] = `
<Provider>
  <WithTranslations>
    <TranslationProvider
      translations={
        Object {
          "test": Object {
            "message": Array [
              "message",
              "bericht",
            ],
          },
        }
      }
    >
      <WithConsumer>
        <Consumer>
          <Component
            setLanguage={[Function]}
          >
            <button
              onClick={[Function]}
            >
              lang
            </button>
            <Translate
              id="test.message"
            >
              bericht
            </Translate>
          </Component>
        </Consumer>
      </WithConsumer>
    </TranslationProvider>
  </WithTranslations>
</Provider>
`;

exports[`should override the parent translations 1`] = `
<Provider>
  <One>
    <TranslationProvider
      translations={
        Object {
          "hello": Array [
            "yes",
          ],
          "test": Array [
            "hello",
          ],
        }
      }
    >
      <Component>
        <Translate
          id="test"
        >
          hello
        </Translate>
        <Translate
          id="hello"
        >
          yes
        </Translate>
        <Two>
          <TranslationProvider
            translations={
              Object {
                "test": Array [
                  "it works!",
                ],
              }
            }
          >
            <Component>
              <Translate
                id="test"
              >
                it works!
              </Translate>
              <Translate
                id="hello"
              >
                yes
              </Translate>
            </Component>
          </TranslationProvider>
        </Two>
      </Component>
    </TranslationProvider>
  </One>
</Provider>
`;

exports[`should replace placeholders with provided data 1`] = `
<Provider>
  <WithTranslations>
    <TranslationProvider
      translations={
        Object {
          "greeting": Array [
            "Hello {name}!",
          ],
        }
      }
    >
      <Component>
        <Translate
          data={
            Object {
              "name": "Steve",
            }
          }
          id="greeting"
        >
          Hello Steve!
        </Translate>
      </Component>
    </TranslationProvider>
  </WithTranslations>
</Provider>
`;
